--- a/app/views/Home.scala.html
+++ b/app/views/Home.scala.html
@@ -3,11 +3,13 @@
  * to do sample project
  *
  *@
+@import lib.model.User
 
-@(vv: model.ViewValueCommon)
+@(user:User#EmbeddedId, vv: model.ViewValueCommon)
 @common.Default(vv){
    <ul>
     <li><a href = "/category/list">カテゴリー一覧</a></li>
     <li><a href = "/todo/list">Todo一覧</a></li>
+    <p>@user.v.id</p>
  </ul>
 }
