--- a/app/views/todo/list.scala.html
+++ b/app/views/todo/list.scala.html
@@ -1,14 +1,36 @@
 
 @import lib.model.Todo
-@(todo:Todo#EmbeddedId, vv: model.ViewValueCommon)
+@(todos: Seq[Todo#EmbeddedId], vv: model.ViewValueCommon)
 @common.Default(vv){
-    <ul class = "card">
-      <li class = "card__content">@todo.v.id</li>
-      <li class = "card__content">@todo.v.category_id</li>
-      <li class = "card__content">@todo.v.title</li>
-      <li class = "card__content">@todo.v.state</li>
-      <li class = "card__content">@todo.v.createdAt</li>
-      <li class = "card__content">@todo.v.updatedAt</li>
-    </ul>
+    <div class="card">
+        <ul class = "card__content">
+            <li class = "card__content--id">ID</li>
+            <li class = "card__content--title">TITLE</li>
+            <li class = "card__content--body">BODY</li>
+            <li class = "card__content--category">CATEGORY</li>
+            <li class = "card__content--state">STATUS</li>
+        </ul>
+    </div>
+
+    @for(todo <- todos) {
+        <div class="card">
+            <ul class = "card__content">
+                <li class = "card__content--id">@todo.v.id</li>
+                <li class = "card__content--title">@todo.v.title</li>
+                <li class = "card__content--body">@todo.v.body</li>
+                <li class = "card__content--category">@todo.v.category_id</li>
+                <li class = "card__content--state">
+                    @if(todo.v.state == Some(0)){TODO}else if(todo.v.state == Some(1)){RUN} else {DONE}
+                </li>
+            </ul>
+        </div>
+    }
+
+    <div>
+        <h2><a href = "/todo/registerForm">Register Form</a></h2>
+    </div>
+    <div>
+        <h2><a href = "/">Back To Home</a></h2>
+    </div>
 
 }
