編集機能実装

--- a/app/views/todo/detail.scala.html
+++ b/app/views/todo/detail.scala.html
@@ -1,14 +1,17 @@
 
 @import lib.model.Todo
 @(todo: Todo#EmbeddedId, vv: model.ViewValueCommon)(implicit messageProvider: MessagesProvider, requestHeader: RequestHeader)
-@common.Default(vv){
-    <div>
-        <ul>
-            <li class>@todo.v.id</li>
-            <li class>@todo.v.title</li>
-            <li class>@todo.v.body</li>
-            <li class>@todo.v.category_id</li>
-            <li class>@todo.v.state.name</li>
+@common.Default(vv) {
+    <div class = "detail">
+        <ul class = "detail__list">
+            <li class = "detail__list--item">@todo.v.id</li>
+            <li class = "detail__list--item">@todo.v.title</li>
+            <li class = "detail__list--item">@todo.v.body</li>
+            <li class = "detail__list--item">@todo.v.category_id</li>
+            <li class = "detail__list--item">@todo.v.state</li>
         </ul>
     </div>
+    <h2>
+        <a href = "/todo/list">Back To Todo List</a>
+    </h2>
 }
