--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -109,3 +109,11 @@ body {
   cursor:    pointer;
 }
 
+.card__content--item{
+  width: 31%;
+  padding: 5px;
+  display: inline-block;
+  text-align: center;
+  border-left: solid 1px #5d5d5d;
+  border-right: solid 1px #5d5d5d;
+}
