--- a/app/views/Home.scala.html
+++ b/app/views/Home.scala.html
@@ -5,8 +5,6 @@
  *@
 @(vv: model.ViewValueCommon)
 @common.Default(vv){
- <ul>
-    <li><a href = "/todo/list">Todo一覧</a></li>
-    <li><a href = "/category/list">カテゴリー一覧</a></li>
- </ul>
+    <h2><a href = "/todo/list">Todo一覧</a></h2>
+    <h2><a href = "/category/list">カテゴリー一覧</a></h2>
 }
