--- a/app/views/todo/detail.scala.html
+++ b/app/views/todo/detail.scala.html
@@ -2,11 +2,11 @@
 @import lib.model.Todo
 @(todo: Todo#EmbeddedId, categories: Seq[Category#EmbeddedId], vv: model.ViewValueCommon)(implicit messageProvider: MessagesProvider, requestHeader: RequestHeader)
 @common.Default(vv) {
-    <div class = "detail" style ="background-color: #@categories(todo.v.category_id.get - 1).v.color">
+    <div class = "detail" style ="background-color: #@Category.colorMap(categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.color).head)">
         <div class = "detail__list">
             <div class = "detail__list--item">@todo.v.title</div>
             <div class = "detail__list--item">@todo.v.body</div>
-            <div class = "detail__list--item">@categories(todo.v.category_id.get - 1).v.name</div>
+            <div class = "detail__list--item">@categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.name)</div>
             <div class = "detail__list--item">@todo.v.state</div>
         </div>
     </div>
