--- a/app/views/todo/list.scala.html
+++ b/app/views/todo/list.scala.html
@@ -14,12 +14,12 @@
     </div>
     @for(todo <- todos) {
         <div class = "card">
-            <div class = "card__content" style ="background-color: #@categories(todo.v.category_id.get - 1).v.color">
+            <div class = "card__content" style ="background-color: #@Category.colorMap(categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.color).head)">
                 <div class = "card__content--id">@todo.v.id</div>
                 <div class = "card__content--title">@todo.v.title</div>
                 <div class = "card__content--body">@todo.v.body</div>
                 <div class = "card__content--category">
-                    @categories(todo.v.category_id.get - 1).v.name
+                    @categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.name)
                 </div>
                 <div class = "card__content--state">@todo.v.state.name</div>
 
