--- a/app/views/todo/registerForm.scala.html
+++ b/app/views/todo/registerForm.scala.html
@@ -1,14 +1,19 @@
-@import controllers.TodoFormData
-@(form: Form[TodoFormData], vv: model.ViewValueCommon)(implicit messageProvider: MessagesProvider, requestHeader: RequestHeader)
+@import lib.persistence.db.TodoFormData
+@import lib.model.Category
+@(form: Form[TodoFormData], categories: Seq[Category#EmbeddedId], vv: model.ViewValueCommon)(implicit messageProvider: MessagesProvider, requestHeader: RequestHeader)
 
 @common.Default(vv) {
     @helper.form(action = controllers.routes.TodoController.add) {
         @helper.CSRF.formField
-        @helper.inputText(form("category"))
-        @helper.inputText(form("title"),'cols -> 100)
+        @helper.inputRadioGroup(
+            form("category"),
+            options = categories.map(category => (category.v.id.get.toString, category.v.name)),
+            '_help -> ""
+        )
+        @helper.inputText(form("title"),
+            'cols -> 100)
         @helper.textarea(form("body"),
-            'rows -> 7, 'cols -> 100,
-        '_label -> "body", '_showConstraints -> false)
+            'rows -> 7, 'cols -> 100, '_label -> "body", '_showConstraints -> false)
         <input type="submit" value="Register">
     }
     <h2>
