--- a/app/views/todo/list.scala.html
+++ b/app/views/todo/list.scala.html
@@ -14,7 +14,7 @@
     </div>
     @for(todo <- todos) {
         <div class = "card">
-            <div class = "card__content" style ="background-color: #@Category.colorMap(categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.color).head)">
+            <div class = "card__content" style ="background-color: @Category.colorMap(categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.color).head);">
                 <div class = "card__content--id">@todo.v.id</div>
                 <div class = "card__content--title">@todo.v.title</div>
                 <div class = "card__content--body">@todo.v.body</div>
@@ -51,7 +51,7 @@
     }
 
     <div>
-        <h2><a href = "/todo/registerForm">Register Form</a></h2>
+        <h2><a href = "/todo/register">Register Form</a></h2>
     </div>
     <div>
         <h2><a href = "/">Back To Home</a></h2>
