--- a/app/views/category/list.scala.html
+++ b/app/views/category/list.scala.html
@@ -1,20 +1,30 @@
 @import lib.model.Category
-@(categories: Seq[Category#EmbeddedId], vv: model.ViewValueCommon)
+@(categories: Seq[Category#EmbeddedId], vv: model.ViewValueCommon)(implicit messageProvider: MessagesProvider, requestHeader: RequestHeader)
 @common.Default(vv){
     <div class = "card">
         <div class = "card__content">
-            <div class = "card__content--item">Name</div>
-            <div class = "card__content--item">Slug</div>
-            <div class = "card__content--item">Color</div>
+            <div class = "card__content--name">Name</div>
+            <div class = "card__content--slug">Slug</div>
+            <div class = "card__content--color">Color</div>
         </div>
     </div>
     @for(category <- categories){
 
         <div class = "card">
             <div class = "card__content" style="background-color: @Category.colorMap(category.v.color)">
-                <div class = "card__content--item">@category.v.name</div>
-                <div class = "card__content--item">@category.v.slug</div>
-                <div class = "card__content--item">@Category.colorMap.get(category.v.color)</div>
+                <div class = "card__content--name">@category.v.name</div>
+                <div class = "card__content--slug">@category.v.slug</div>
+                <div class = "card__content--color">@Category.colorMap.get(category.v.color)</div>
+
+                <div class = "card__footer">
+                    <div class = "card__footer--item">
+                    @helper.form(action = controllers.routes.CategoryController.edit(category.v.id.getOrElse(0))){
+                        @helper.CSRF.formField
+                        <input type="hidden" value="@category.id" name="id">
+                        <input type="submit" value="Edit">
+                        }
+                    </div>
+                </div>
             </div>
         </div>
     }
