カテゴリ削除機能実装・その他手直し

--- a/app/views/category/edit.scala.html
+++ b/app/views/category/edit.scala.html
@@ -1,6 +1,7 @@
-@import lib.persistence.db.CategoryFormData
+@import lib.formData.CategoryFormData
 @import lib.model.Category
-@(id: Long, form: Form[CategoryFormData], vv: model.ViewValueCommon)(implicit messageProvider: MessagesProvider, requestHeader: RequestHeader)
+
+@(id: Long, form: Form[CategoryFormData],vv: model.ViewValueCommon)(implicit messageProvider: MessagesProvider, requestHeader: RequestHeader)
 
 @common.Default(vv) {
     @helper.form(action = controllers.routes.CategoryController.update(id)) {
@@ -9,7 +10,7 @@
         @helper.inputText(form("slug"))
         @helper.inputRadioGroup(
             form("color"),
-            options = Category.colorMap.map(color => (color._1.toString, color._2)).toSeq,
+            options = Category.ColorMap.map1.toSeq.map(color => (color._2.code.toString, color._2.name)),
             '_help -> ""
         )
         <input type="submit" value="Update">
