--- a/app/views/category/register.scala.html
+++ b/app/views/category/register.scala.html
@@ -1,5 +1,6 @@
-@import lib.persistence.db.CategoryFormData
 @import lib.model.Category
+@import lib.formData.CategoryFormData
+@import lib.model.Category.ColorMap
 @(form: Form[CategoryFormData], categories: Seq[Category#EmbeddedId], vv: model.ViewValueCommon)(implicit messageProvider: MessagesProvider, requestHeader: RequestHeader)
 
 @common.Default(vv) {
@@ -7,9 +8,8 @@
         @helper.CSRF.formField
         @helper.inputText(form("title"))
         @helper.inputText(form("slug"))
-        @helper.inputRadioGroup(
-            form("color"),
-            options = Category.colorMap.map(color => (color._1.toString, color._2)).toSeq,
+        @helper.inputRadioGroup(form("color"),
+            options = Category.ColorMap.map1.toSeq.map(color => (color._2.code.toString, color._2.name)),
             '_help -> ""
         )
         <input type="submit" value="Register">
