--- a/app/views/category/list.scala.html
+++ b/app/views/category/list.scala.html
@@ -11,10 +11,10 @@
     @for(category <- categories){
 
         <div class = "card">
-            <div class = "card__content" style="background-color: @Category.ColorMap(category.v.color.toShort)">
+            <div class = "card__content" style="background-color: @category.v.color">
                 <div class = "card__content--name">@category.v.name</div>
                 <div class = "card__content--slug">@category.v.slug</div>
-                <div class = "card__content--color">@Category.ColorMap(category.v.color.toShort)</div>
+                <div class = "card__content--color">@category.v.color</div>
 
                 <div class = "card__footer">
                     <div class = "card__footer--item">
@@ -25,7 +25,7 @@
                         }
                     </div>
                     <div class = "card__footer--item">
-                    @helper.form(action = controllers.routes.CategoryController.remove) {
+                    @helper.form(action = controllers.routes.CategoryController.remove(category.id)) {
                         @helper.CSRF.formField
                         <input type="hidden" value="@category.id" name="id">
                         <input type="submit" value="Remove">
