--- a/app/views/todo/list.scala.html
+++ b/app/views/todo/list.scala.html
@@ -14,12 +14,12 @@
     </div>
     @for(todo <- todos) {
         <div class = "card">
-            <div class = "card__content" style ="background-color: @Category.ColorMap(categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.color).headOption.getOrElse(1).toShort);">
+            <div class = "card__content" style ="background-color: @categories.filter(category => category.v.id == Some(todo.v.category_id) ).map(_.v.color);">
                 <div class = "card__content--id">@todo.v.id</div>
                 <div class = "card__content--title">@todo.v.title</div>
                 <div class = "card__content--body">@todo.v.body</div>
                 <div class = "card__content--category">
-                    @categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.name)
+                    @categories.filter(category => category.v.id == Some(todo.v.category_id)).map(_.v.name)
                 </div>
                 <div class = "card__content--state">@todo.v.state.name</div>
 
@@ -39,7 +39,7 @@
                         }
                     </div>
                     <div class = "card__footer--item">
-                        @helper.form(action = controllers.routes.TodoController.remove) {
+                        @helper.form(action = controllers.routes.TodoController.remove(todo.id)) {
                             @helper.CSRF.formField
                             <input type="hidden" value="@todo.id" name="id">
                             <input type="submit" value="Remove">
