--- a/app/views/todo/detail.scala.html
+++ b/app/views/todo/detail.scala.html
@@ -2,15 +2,18 @@
 @import lib.model.Todo
 @(todo: Todo#EmbeddedId, categories: Seq[Category#EmbeddedId], vv: model.ViewValueCommon)(implicit messageProvider: MessagesProvider, requestHeader: RequestHeader)
 @common.Default(vv) {
-    <div class = "detail" style ="background-color: @categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.color)">
-        <div class = "detail__list">
-            <div class = "detail__list--item">@todo.v.title</div>
-            <div class = "detail__list--item">@todo.v.body</div>
-            <div class = "detail__list--item">@categories.filter(category => category.v.id == todo.v.category_id ).map(_.v.name)</div>
-            <div class = "detail__list--item">@todo.v.state</div>
+    @defining(categories.filter(category => category.v.id == Some(todo.v.category_id))) { thisCategory =>
+        <div class = "detail" style = "background-color: @thisCategory.map(_.v.color)">
+
+            <div class = "detail__list">
+                <div class = "detail__list--item">@todo.v.title</div>
+                <div class = "detail__list--item">@todo.v.body</div>
+                <div class = "detail__list--item">@thisCategory.map(_.v.color)</div>
+                <div class = "detail__list--item">@todo.v.state</div>
+            </div>
         </div>
-    </div>
-    <h2>
-        <a href = "/todo/list">Back To Todo List</a>
-    </h2>
+        <h2>
+            <a href = "/todo/list">Back To Todo List</a>
+        </h2>
+    }
 }
