--- a/app/views/todo/list.scala.html
+++ b/app/views/todo/list.scala.html
@@ -13,13 +13,14 @@
         </div>
     </div>
     @for(todo <- todos) {
+        @defining(categories.filter(category => category.v.id == Some(todo.v.category_id))){ thisCategory =>
         <div class = "card">
-            <div class = "card__content" style ="background-color: @categories.filter(category => category.v.id == Some(todo.v.category_id) ).map(_.v.color);">
+            <div class = "card__content" style ="background-color: @thisCategory.map(_.v.color)">
                 <div class = "card__content--id">@todo.v.id</div>
                 <div class = "card__content--title">@todo.v.title</div>
                 <div class = "card__content--body">@todo.v.body</div>
                 <div class = "card__content--category">
-                    @categories.filter(category => category.v.id == Some(todo.v.category_id)).map(_.v.name)
+                    @thisCategory.map(_.v.name)
                 </div>
                 <div class = "card__content--state">@todo.v.state.name</div>
 
@@ -48,6 +49,7 @@
                 </div>
             </div>
         </div>
+        }
     }
 
     <div>
